--- a/styles/sass/utils/animation.scss
+++ b/styles/sass/utils/animation.scss
@@ -1,4 +1,6 @@
-
+/* Les Animations
+./sass/utils/animation.scss */
+/* animation pour le bouton like */
 @keyframes hover-like {
     from {
         opacity: 0;
@@ -10,7 +12,7 @@
         left: 25%;
     }
 }
-
+/* animation de rotation */
 @keyframes rotation {
     from {
         transform: rotate(0deg);
@@ -19,7 +21,7 @@
         transform: rotate(360deg);
     }
 }
-
+/* animation d'apparition pour les carte de plat */
 @keyframes apparition {
     from {
         opacity: 0;
@@ -30,7 +32,7 @@
         transform: translateY(0);
     }
 }
-
+/* animation de disparition pour mon animation de chargement */
 @keyframes dispariton {
     0% {
         opacity: 100%;
@@ -44,5 +46,4 @@
         opacity: 0%;
         z-index: -1000;
     }
-
 }
