modification de l'input de recherche pour qu'il soit en pleine largeur en version desktop. modification de la partie fonctionnement pour que les carte ce répartise sur toute la largeur

--- a/styles/sass/pages/accueil.scss
+++ b/styles/sass/pages/accueil.scss
@@ -131,12 +131,12 @@ form {
 /* Media Queries pour TABLETTE et DESKTOP */
 /* tablette */
 @media all and (min-width: 720px) {
-    form {
-        input {
-            width: 720px;
-            border-radius: 4px;
-        }
-    }
+    // form {
+    //     input {
+    //         width: 720px;
+    //         border-radius: 4px;
+    //     }
+    // }
     #fonctionnement {
         width: 720px;
     }
@@ -160,7 +160,7 @@ form {
     }
     #fonctionnement > div {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
     .steps {
         width: 325px;
