modification et correction: timing d'animation ajusté, taille du composent like ajusté pour une meilleur activation, ajustement des image de restaurants, remplacement du placeholder de la barre de recherche pour un label (correction du warning W3C), augmentation de l'espace sous le bouton commander, le bouton submit et désactivé pour ne renvoyer que sur la page d'accueil

--- a/styles/sass/components/components.scss
+++ b/styles/sass/components/components.scss
@@ -38,6 +38,7 @@
 .like {
     position: relative;
     width: 48px;
+    scale: 100%;
     @include display-flex-center-center;
     &:hover {
         cursor: pointer;
@@ -55,7 +56,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         &:hover {
-            animation: hover-like 0.5s ease-in-out forwards;
+            animation: hover-like 0.2s ease-in-out forwards;
         }
     }
 }
