--- a/styles/sass/pages/restaurants.scss
+++ b/styles/sass/pages/restaurants.scss
@@ -2,6 +2,7 @@
 ./sass/pages/restaurants.scss */
 #menu {
     background-color: $background-white-grey;
+    padding-bottom: 24px;
 }
 /* Section header
 ./sass/pages/restaurants.scss */
@@ -49,8 +50,8 @@
 ./sass/pages/restaurants.scss */
 #services {
     width: 100%;
-    padding: 0 18px;
-    padding-top: 32px;
+    padding: 32px 18px 0 18px;
+    // padding-top: 32px;
 }
 .service {
     width: 100%;
@@ -76,7 +77,7 @@
             min-width: calc(100% - $dimension-check-plat - $dimension-check-plat);
         }
         i {
-            animation: rotation 0.3s linear;
+            animation: rotation 0.4s linear;
             animation-iteration-count: 1;
         }
     }
@@ -90,7 +91,7 @@
 }
 .content {
     min-width: calc(100% - $dimension-check-plat);
-    transition: 0.3s linear;
+    transition: 0.4s linear;
     @include display-flex-column;
     justify-content: space-evenly;
     p, h2 {
