--- a/styles/sass/pages/accueil.scss
+++ b/styles/sass/pages/accueil.scss
@@ -43,7 +43,7 @@ form {
         margin-bottom: 35px;
 
         background-color: #EAEAEA;
-        box-shadow: inset 0 3px 3px $tertiaire;
+        box-shadow: inset 0 3px 3px #C7C7C7;
         text-align: center;
         font-weight: 700;
         font-family: Arial, 'Font Awesome 5 Free';
