--- a/styles/style.css
+++ b/styles/style.css
@@ -164,7 +164,7 @@ form p {
   width: 100%;
   margin-bottom: 35px;
   background-color: #EAEAEA;
-  box-shadow: inset 0 3px 3px #99E2D0;
+  box-shadow: inset 0 3px 3px #C7C7C7;
   text-align: center;
   font-weight: 700;
   font-family: Arial, "Font Awesome 5 Free";
